; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_xcb.c_x11_helper_get_screenshot_surface.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_xcb.c_x11_helper_get_screenshot_surface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__*, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@xcb = common dso_local global %struct.TYPE_4__* null, align 8
@root_visual = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @x11_helper_get_screenshot_surface() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @xcb, align 8
  %2 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  %3 = load i32, i32* %2, align 8
  %4 = call i32 (...) @xcb_stuff_get_root_window()
  %5 = load i32, i32* @root_visual, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @xcb, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @xcb, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32* @cairo_xcb_surface_create(i32 %3, i32 %4, i32 %5, i32 %10, i32 %15)
  ret i32* %16
}

declare dso_local i32* @cairo_xcb_surface_create(i32, i32, i32, i32, i32) #1

declare dso_local i32 @xcb_stuff_get_root_window(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
